# minimal-pdf-editor

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: build-executables.yml
